# Bourse

./: .gitignore  CMakeLists.txt  Makefile  pyproject.toml  setup.py
bindings/: pybind_module.cpp
include/bourse/: event.hpp  order_book.hpp  types.hpp
python/bourse/: __init__.py  base.py  market.py  research.py
scripts/: build_ext.sh  demo.py  demo_market.py
src/: order_book.cpp
tests/: bench.cpp  test_main.cpp  test_order_book.cpp  test_replay.cpp  testkit.hpp
