[build-system]
requires = ["setuptools>=64", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "bourse"
version = "0.1.0"
description = "Event-driven limit order book exchange simulator with a research layer."
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib"]

[project.optional-dependencies]
research = ["jupyter", "scipy", "scikit-learn"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]